--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
     <meta>
     <title>Shaunna O'Brien Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-cale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css"
+    <link rel="stylesheet" type="text/css" href="style2.css"
   </head>
 
 
 
-  <header>
-    <h1> Shaunna O'Brien</h1>
-    <h2> Professional... um, coder</h2>
-  </header>
-
   <body>
+    <header>
+      <h1> Shaunna O'Brien</h1>
+      <h2> Full stack </h2>
+    </header>
       <nav>
         <a href="index.html"> About </a>
         <a href="coding-projects.html"> Coding Projects </a>
