updates to style3 using grid for project page

--- a/coding-projects.html
+++ b/coding-projects.html
@@ -3,48 +3,78 @@
   <head>
     <meta>
     <title>Shaunna O'Brien Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="style.css"
+    <link rel="stylesheet" type="text/css" href="styleprojects3.css">
+    <meta name="viewport" content="width=device-width, initial-cale=1.0">
   </head>
 
 
 
   <header>
     <h1> Shaunna O'Brien</h1>
-    <h2> Professional... um, coder</h2>
+    <h2> Full stack</h2>
   </header>
 
   <body>
       <nav>
         <a href="index.html"> About </a>
         <a href="coding-projects.html"> Coding Projects </a>
-        <a href="somepage.com"> Resume </a>
+        <a href="resume.html"> Resume </a>
         <a target="_blank" href="something.html"> some other page</a>
       </nav>
 
       <section class="background">
-        <h2>Programming Projects</h2>
-        <p> These projects were coded during a three-month, full-stack bootcamp completed at PDX Code Guild in Portland, Oregon, September 2018.</p>
+          <div class="contact">
+            <!-- <img id="headshot" src="current-photo-up.png" alt="Picture of Shaunna O'Brien"> -->
+            <h2>Contact</h2>
+            <h3>For more information or a quote</h3>
+            <p> shaunna.orbien@gmail.com </p>
+            <p> (503) 504-1234 </p>
+            <p> something else </p>
+          </div>
 
-        <h3> Tic Tac Toe </h3>
-        <p> You can play this some other page</a><a target="_blank" href="https://github.com/sobrienpdx/pdx.code.guild/blob/master/tictactoe.py">Tic Tac Toe game</a> against a human friend or the computer. If you choose to play against the computer, there are 3 levels of difficulty to choose from. A hidden feature lets you choose the computer as your opponent, then enter "computer" as your name. Watch the computer play itself!  </p>
+          <div class="rightpage">
+            <div class="projectmenu">
+              <div class="intro">
+              <h2>Programming Projects</h2>
+              <p> These projects were coded during a three-month, full-stack bootcamp completed at PDX Code Guild in Portland, Oregon, September 2018.</p>
+              </div>
 
-        <h3> Connect 4 </h3>
-        <p> Play this <a target="_blank" href="https://github.com/sobrienpdx/pdx.code.guild/blob/master/connect_4_loop.py">Connect 4 game</a> against another human player for this connect 4 game.  </p>
+              <div class="p1">
+              <h3> Tic Tac Toe </h3>
+              <p> You can play this some other page</a><a target="_blank" href="https://github.com/sobrienpdx/pdx.code.guild/blob/master/tictactoe.py">Tic Tac Toe game</a> against a human friend or the computer. If you choose to play against the computer, there are 3 levels of difficulty to choose from. A hidden feature lets you choose the computer as your opponent, then enter "computer" as your name. Watch the computer play itself!  </p>
+              </div>
 
-        <h3> Adventure game </h3>
-        <p> description </p>
+              <div class="p2">
+              <h3> Connect 4 </h3>
+              <p> Play this <a target="_blank" href="https://github.com/sobrienpdx/pdx.code.guild/blob/master/connect_4_loop.py">Connect 4 game</a> against another human player for this connect 4 game.  </p>
+              </div>
 
-        <h3> Hangman </h3>
-        <p> The computer will present you with a series of blanks... guess the letters to discover the word. </p>
+              <div class="p3">
+              <h3> Adventure game </h3>
+              <p> description </p>
+              </div>
 
-        <h3> Hangman solver </h3>
-        <p> This program allows you to efficiently cheat at hangman. Pit the hangman solver against the hangman game and it will win every time! </p>
+              <div class="p4">
+              <h3> Hangman </h3>
+              <p> The computer will present you with a series of blanks... guess the letters to discover the word. </p>
+              </div>
 
-        <h3> Phone book </h3>
-        <p> With a few starter names programmed in, this phone book will let you add, delete, change, or look up your contacts. Changes are saved and available when you next open the program </p>
+              <div class="p5">
+              <h3> Hangman solver </h3>
+              <p> This program allows you to efficiently cheat at hangman. Pit the hangman solver against the hangman game and it will win every time! </p>
+              </div>
 
-        <h3> project </h3>
-        <p> description </p>
+              <div class="p6">
+              <h3> Phone book </h3>
+              <p> With a few starter names programmed in, this phone book will let you add, delete, change, or look up your contacts. Changes are saved and available when you next open the program </p>
+              </div>
+
+              <div class="p7">
+              <h3> project </h3>
+              <p> description </p>
+              </div>
+            </div>
+          </div>
 
 
     </section>
