--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta>
     <title>Shaunna O'Brien Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-cale=1.0">
-    <link rel="stylesheet" type="text/css" href="style2.css"
+    <link rel="stylesheet" type="text/css" href="style3.css"
   </head>
 
 
@@ -17,28 +17,39 @@
       <nav>
         <a href="index.html"> About </a>
         <a href="coding-projects.html"> Coding Projects </a>
-        <a href="somepage.com"> Resume </a>
-        <a target="_blank" href="something.html"> some other page</a>
+        <a href="resume.html"> Resume </a>
+        <a target="_blank" href="something.html"> Capstone Project</a>
       </nav>
 
       <section class="background">
-        <img id="headshot" src="current-photo-up.png" alt="Picture of Shaunna O'Brien">
-        <h2>Background</h2>
-        <h3> Professional background</h3>
-        <p> Prior to becoming a programmer, Shaunna worked extensively in the fields of language and education. In addition to being a native English speaker, she is fluent in Spanish, holdinga Master of Arts degree in Spanish literature from the University of Oregon and a certificate from the Univeristy of Salamanca for "near-native" Spanish. Additionally, she lived in Italy for 4 years and is fluent in Italian. </p>
+        <div class="contact">
+          <img id="headshot" src="current-photo-up.png" alt="Picture of Shaunna O'Brien">
+          <h2>Contact</h2>
+          <h3>For more information or a quote</h3>
+          <p> shaunna.orbien@gmail.com </p>
+          <p> (503) 504-1234 </p>
+          <p> something else </p>
+        </div>
 
-        <p>Shaunna's career in education is expansive and diverse. She has taught Spanish as an adjunct professor at several community colleges in Oregon. She taught English to adults and children at a private English school in Rome, Italy for 4 years. She holds a Master of Science in Speech Language Pathology from the Portland State University, and worked as a bilingual Spanish-English speech language pathologist for Portland Public School district for 3 years.
-        See Shaunna's resume <a target="_blank" href="https://github.com/sobrienpdx/pdx.code.guild/blob/master/tictactoe.py">Here</a>
-        </p>
-        <h3>Programming Interests</h3>
-        <p> Shaunna's interests include: </p>
-          <ul>
-            <li>developing apps with a user friendly interface that can be customized by teachers in order to provide targeted interventions to students.</li>
-            <li> Making super pretty CSS pages, yeah!</li>
-            <li> Writing pretty code and stuff </li>
-            <li> educational games</li>
-          </ul>
+        <div class="rightpage">
+          <h2>Background</h2>
+          <h3> Professional background</h3>
+          <p> Prior to becoming a programmer, Shaunna worked extensively in the fields of language and education. In addition to being a native English speaker, she is fluent in Spanish, holding a Master of Arts degree in Spanish literature from the University of Oregon and a certificate from the Univeristy of Salamanca for "near-native" Spanish. Additionally, she lived in Italy for 4 years and is fluent in Italian. </p>
+
+          <p>Shaunna's career in education is expansive and diverse. She has taught Spanish as an adjunct professor at several community colleges in Oregon. She taught English to adults and children at a private English school in Rome, Italy for 4 years. She holds a Master of Science in Speech Language Pathology from the Portland State University, and worked as a bilingual Spanish-English speech language pathologist for Portland Public School district for 3 years.
+          See Shaunna's resume <a target="_blank" href="https://github.com/sobrienpdx/pdx.code.guild/blob/master/tictactoe.py">Here</a>
+          </p>
+          <h3>Programming interests</h3>
+            <ul>
+              <li>developing apps with a user friendly interface that can be customized by teachers in order to provide targeted interventions to students.</li>
+              <li> Making super pretty CSS pages, yeah!</li>
+              <li> Writing pretty code and stuff </li>
+              <li> educational games</li>
+            </ul>
+        </div>
+
         </section>
+
 
 
   <main>
