working version minus project links

--- a/coding-projects.html
+++ b/coding-projects.html
@@ -17,16 +17,16 @@
   <body>
       <nav>
         <a href="index.html"> About </a>
-        <a href="coding-projects.html"> Coding Projects </a>
+        <a href="projectportal.html"> Coding Projects </a>
         <a href="resume.html"> Resume </a>
-        <a target="_blank" href="something.html"> some other page</a>
+        <a href="something.html"> Capstone Project</a>
       </nav>
 
       <section class="background">
           <div class="contact">
             <!-- <img id="headshot" src="current-photo-up.png" alt="Picture of Shaunna O'Brien"> -->
             <h2>Contact</h2>
-            <h3>For more information or a quote</h3>
+            <!-- <h3>For more information or a quote</h3> -->
             <p> shaunna.orbien@gmail.com </p>
             <p> (503) 504-1234 </p>
             <p> something else </p>
@@ -41,7 +41,8 @@
 
               <div class="p1">
               <h3> Tic Tac Toe </h3>
-              <p> You can play this some other page</a><a target="_blank" href="https://github.com/sobrienpdx/pdx.code.guild/blob/master/tictactoe.py">Tic Tac Toe game</a> against a human friend or the computer. If you choose to play against the computer, there are 3 levels of difficulty to choose from. A hidden feature lets you choose the computer as your opponent, then enter "computer" as your name. Watch the computer play itself!  </p>
+              <p> You can play this </a><a target="_blank" href="https://github.com/sobrienpdx/pdx.code.guild/blob/master/tictactoe.py">Tic Tac Toe game</a> against a human friend or the computer. </p>
+              <!-- <p>  If you choose to play against the computer, there are 3 levels of difficulty to choose from. A hidden feature lets you choose the computer as your opponent, then enter "computer" as your name. Watch the computer play itself!  </p> -->
               </div>
 
               <div class="p2">
