--- a/resume.html
+++ b/resume.html
@@ -16,16 +16,16 @@
     </header>
       <nav>
         <a href="index.html"> About </a>
-        <a href="coding-projects.html"> Coding Projects </a>
+        <a href="projectportal.html"> Coding Projects </a>
         <a href="resume.html"> Resume </a>
-        <a target="_blank" href="something.html"> Capstone Project</a>
+        <a href="capstone.html"> Capstone Project</a>
       </nav>
 
       <section class="background">
         <div class="contact">
           <!-- <img id="headshot" src="current-photo-up.png" alt="Picture of Shaunna O'Brien"> -->
           <h2>Contact</h2>
-          <h3>For more information or a quote</h3>
+          <!-- <h3>For more information or a quote</h3> -->
           <p> shaunna.orbien@gmail.com </p>
           <p> (503) 504-1234 </p>
           <p> something else </p>
@@ -38,7 +38,6 @@
           </div>
           <div>
             <img id="resumeimage" src="sobrienresume.jpeg" alt="Resume for Shaunna O'Brien">
-            <p> resume goes here </p>
           </div>
 
         <div>
