updated font and split projects into two pages

--- a/front-end-projects.html
+++ b/front-end-projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta>
     <title>Shaunna O'Brien Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="style3projectportal.css">
+    <link rel="stylesheet" type="text/css" href="styleprojects3.css">
     <meta name="viewport" content="width=device-width, initial-cale=1.0">
   </head>
 
@@ -19,7 +19,7 @@
         <a href="index.html"> About </a>
         <a href="projectportal.html"> Coding Projects </a>
         <a href="resume.html"> Resume </a>
-        <a href="capstone.html"> Capstone Project</a>
+        <a href="something.html"> Capstone Project</a>
       </nav>
 
       <section class="background">
@@ -33,23 +33,33 @@
           </div>
 
           <div class="rightpage">
-            <div class="squares">
-              <div class="squares-intro">
-              <h2>Choose your adventure</h2>
-              <!-- <p> These projects were coded during a three-month, full-stack bootcamp completed at PDX Code Guild in Portland, Oregon, September 2018.</p> -->
+            <div class="projectmenu">
+              <div class="intro">
+              <h2>Programming Projects</h2>
+              <p> These projects were coded during a three-month, full-stack bootcamp completed at PDX Code Guild in Portland, Oregon, September 2018.</p>
               </div>
 
-              <div class="front-end">
-              <!-- <h3> Front end </h3> -->
-              <a href="front-end-projects.html">Front End</a>
-              <p> user interface</p>
+              <div class="p1">
+              <h3> Alternative portfolio 1 </h3>
+            </a><a target="_blank" href="https://sobrienpdx.github.io/">This</a> <p> page is the portfolio website you are currently looking done in a different style. (Main page only). </p>
+
               </div>
 
-              <div class="back-end">
-              <!-- <h3> Connect 4 </h3> -->
-              <a href="coding-projects.html">Back End</a>
-              <p> behind the scenes</p>
+              <div class="p2">
+              <h3> Alternative portfolio 2 </h3>
+              <p>  Another one.  </p>
               </div>
+
+              <div class="p3">
+              <h3> Something else </h3>
+              <p> description </p>
+              </div>
+
+              <div class="p4">
+              <h3> etc. </h3>
+              <p> Description </p>
+              </div>
+
 
               </div>
             </div>
